--- a/Style.css
+++ b/Style.css
@@ -32,11 +32,16 @@ a:visited {
     color: white;
     background: #4887ef; 
     margin-right: 25px;
-    margin-left: 25px;
+    margin-left: 15px;
     padding: 7px 15px;
     border-radius: 3px; 
     font-weight: bold;
+    font-size: 13px;
     
+}
+
+.login:focus {
+    outline: none;
 }
 
 .logo {
